Ajout active dans update badge et pointscale
