# swagger/spring-server/src/main/resources/api-spec.yaml
@@ -349,6 +349,8 @@ definitions:
         type: integer
       name:
         type: string
+      active:
+        type: boolean
   PointScale:
     type: object
     properties:
@@ -356,6 +358,8 @@ definitions:
         type: integer
       name:
         type: string
+      active:
+        type: boolean
   Rule:
     type: object
     properties:
